# aitools

./: readme.md
app/: package-lock.json  package.json  tailwind.config.js
app/src/: App.tsx  router.tsx
app/src/components/: Dashboard.tsx  Login.tsx
app/src/components/tools/: TextSumarizer.tsx
app/src/pages/: DashboardPage.tsx
server/: .gitignore  main.py  pyproject.toml
